Checkbox styles, item sheet scroll header alignment fix.

--- a/src/scss/quadrone/components/configurable-source.scss
+++ b/src/scss/quadrone/components/configurable-source.scss
@@ -10,6 +10,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    margin-top: 0.125rem;
 
     flex: 1;
     min-width: 0;
